--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="format-detection"content="telephone=no, email=no" />
+    <title>BBF</title>
+    <link rel="stylesheet" href="css/bbf-style.css"/>
 </head>
 <body>
-
+<div class="wrap-box">
+    <header class="header">
+        <div class="ment-btn">
+            <div class="ment-btn-line"></div>
+        </div>
+        <span>#</span>
+        <h1 class="header-tt">BBF礼物商店</h1>
+    </header>
+    <section class="index-wrap">
+        <img src="img/index-bg.jpg" alt=""/>
+    </section>
+</div>
 </body>
 </html>
