--- a/show.html
+++ b/show.html
@@ -26,6 +26,7 @@
     </div>
     <section class="show-con">
         <img src="img/show.jpg" alt=""/>
+        <div class="show-con-btn"></div>
     </section>
 </div>
 </body>
