--- a/show.html
+++ b/show.html
@@ -26,7 +26,7 @@
     </div>
     <section class="show-con">
         <img src="img/show.jpg" alt=""/>
-        <div class="show-con-btn"></div>
+        <div class="show-con-btn">￥99预付抢订</div>
     </section>
 </div>
 </body>
