--- a/appointment-info.html
+++ b/appointment-info.html
@@ -11,7 +11,44 @@
 </head>
 <body>
 <div class="wrap-box">
-
+    <section class="appointment-wrap">
+        <p>
+            谢谢您预订<em class="point-font">陈冠希限量版BOBO BEAR</em>
+        </p>
+        <p>
+            在确认付款之前请用力了解如下内容
+        </p>
+        <p>
+            <strong class="bk-font">预约规则</strong>
+        </p>
+        <p>
+            预约截止日期 2014-12-01
+        </p>
+        <p>
+            现在预约，预计12月1日收货，并有机会
+            得到陈冠希签名珍藏版BOBO BEAR
+        </p>
+        <p>
+            展开规则详情介绍
+        </p>
+        <p>
+            <strong class="bk-font">支付流程</strong>
+        </p>
+        <p>
+            支付预约金￥100 
+        </p>
+        <p>
+            在预约有效期内通过短信及微信通知您补
+            交尾款 ￥799
+        </p>
+        <p>
+            完成支付，等待收货
+        </p>
+        <p>
+            <div class="appointment-btn-left">送自己</div>
+            <div class="appointment-btn-right">送好友</div>
+        </p>
+    </section>
 </div>
 </body>
 </html>
