--- a/appointment-info.html
+++ b/appointment-info.html
@@ -44,10 +44,10 @@
         <p>
             完成支付，等待收货
         </p>
-        <p>
+        <div class="appointment-btn-wrap">
             <div class="appointment-btn-left">送自己</div>
             <div class="appointment-btn-right">送好友</div>
-        </p>
+        </div>
     </section>
 </div>
 </body>
