--- a/appointment-info.html
+++ b/appointment-info.html
@@ -22,31 +22,43 @@
             <strong class="bk-font">预约规则</strong>
         </p>
         <p>
+            <span class="right-sj"></span>
             预约截止日期 2014-12-01
         </p>
         <p>
+            <span class="right-sj"></span>
             现在预约，预计12月1日收货，并有机会
             得到陈冠希签名珍藏版BOBO BEAR
         </p>
         <p>
-            展开规则详情介绍
+            <em class="read-more">展开规则详情介绍</em>
+            <i class="read-more-info">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi cumque excepturi modi nobis perferendis placeat reprehenderit! Commodi culpa earum eos illum nesciunt! Alias esse iusto non perferendis porro quasi.
+            </i>
         </p>
         <p>
             <strong class="bk-font">支付流程</strong>
         </p>
         <p>
+            <span class="right-sj"></span>
             支付预约金￥100 
         </p>
         <p>
+            <span class="right-sj"></span>
             在预约有效期内通过短信及微信通知您补
             交尾款 ￥799
         </p>
         <p>
+            <span class="right-sj"></span>
             完成支付，等待收货
         </p>
         <div class="appointment-btn-wrap">
-            <div class="appointment-btn-left">送自己</div>
-            <div class="appointment-btn-right">送好友</div>
+            <div class="appointment-btn-left">
+                <i><img src="img/people1.png" alt=""/></i>送自己
+            </div>
+            <div class="appointment-btn-right">
+                <i><img src="img/people2.png" alt=""/></i>送好友
+            </div>
         </div>
     </section>
 </div>
