--- a/appointment-info.html
+++ b/appointment-info.html
@@ -22,40 +22,83 @@
             <strong class="bk-font">预约规则</strong>
         </p>
         <p>
-            <span class="right-sj"></span>
-            预约截止日期 2014-12-01
+            <span class="left-slogo"></span>
+            <i class="wz">预约截止日期 2014-12-01</i>
         </p>
         <p>
-            <span class="right-sj"></span>
-            现在预约，预计12月1日收货，并有机会
-            得到陈冠希签名珍藏版BOBO BEAR
+            <span class="left-slogo"></span>
+            <i class="wz">
+                现在预约，预计12月1日收货，并有机会
+                得到陈冠希签名珍藏版BOBO BEAR
+            </i>
         </p>
-        <p>
+        <div class="read-more-wrap">
             <em class="read-more" id="j-tt">
                 展开规则详情介绍
                 <span class="read-more-down"></span>
             </em>
-            <i class="read-more-info" id="j-info">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi cumque excepturi modi nobis perferendis placeat reprehenderit! Commodi culpa earum eos illum nesciunt! Alias esse iusto non perferendis porro quasi.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi cumque excepturi modi nobis perferendis placeat reprehenderit! Commodi culpa earum eos illum nesciunt! Alias esse iusto non perferendis porro quasi.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi cumque excepturi modi nobis perferendis placeat reprehenderit! Commodi culpa earum eos illum nesciunt! Alias esse iusto non perferendis porro quasi.
-            </i>
-        </p>
+            <section class="read-more-info" id="j-info">
+                <p>
+                    <span class="left-slogo2"></span>
+                    <i class="wz">
+                        选择送朋友，当预约成功后需要朋友填写
+                        地址或者自己帮助朋友填写地址
+                    </i>
+                </p>
+                <p>
+                    <span class="left-slogo2"></span>
+                    <i class="wz">
+                        选择送朋友，当预约成功后需要朋友填写
+                        地址或者自己帮助朋友填写地址
+                    </i>
+                </p>
+                <p>
+                    <span class="left-slogo2"></span>
+                    <i class="wz">
+                        选择送朋友，当预约成功后需要朋友填写
+                        地址或者自己帮助朋友填写地址
+                    </i>
+                </p>
+                <p>
+                    <span class="left-slogo2"></span>
+                    <i class="wz">
+                        选择送朋友，当预约成功后需要朋友填写
+                        地址或者自己帮助朋友填写地址
+                    </i>
+                </p>
+                <p>
+                    <span class="left-slogo2"></span>
+                    <i class="wz">
+                        选择送朋友，当预约成功后需要朋友填写
+                        地址或者自己帮助朋友填写地址
+                    </i>
+                </p>
+                <p>
+                    <span class="left-slogo2"></span>
+                    <i class="wz">
+                        选择送朋友，当预约成功后需要朋友填写
+                        地址或者自己帮助朋友填写地址
+                    </i>
+                </p>
+            </section>
+        </div>
         <p>
             <strong class="bk-font">支付流程</strong>
         </p>
         <p>
-            <span class="right-sj"></span>
-            支付预约金￥100 
+            <span class="left-slogo"></span>
+            <i class="wz">支付预约金￥100</i> 
         </p>
         <p>
-            <span class="right-sj"></span>
-            在预约有效期内通过短信及微信通知您补
-            交尾款 ￥799
+            <span class="left-slogo"></span>
+            <i class="wz">
+                在预约有效期内通过短信及微信通知您补
+                交尾款 ￥799
+            </i>
         </p>
         <p>
-            <span class="right-sj"></span>
-            完成支付，等待收货
+            <span class="left-slogo"></span>
+            <i class="wz">完成支付，等待收货</i>
         </p>
         <div class="appointment-btn-wrap">
             <div class="appointment-btn-left">
@@ -75,19 +118,25 @@
         };
         var oTt = $("j-tt");
         var oInfo = $("j-info");
+        console.log(oTt.innerText);
         oInfo.num = 0;
-        oTt.onclick = function () {
+        oTt.onclick = function (e) {
             if(oInfo.num % 2 == 0){
                 oInfo.style.display = "block";
+                oTt.innerHTML = "收起规则详情介绍 <span class= 'read-more-up'></span>";
                 oInfo.num += 1;
             }else{
                 oInfo.style.display = "none";
+                oTt.innerHTML = "展开规则详情介绍 <span class= 'read-more-down'></span>";
                 oInfo.num += 1;
             }
+            e.stopPropagation()
         };
-        oInfo.onclick = function () {
+        oInfo.onclick = function (e) {
             oInfo.style.display = "none";
+            oTt.innerHTML = "展开规则详情介绍 <span class= 'read-more-down'></span>";
             oInfo.num += 1;
+            e.stopPropagation()
         }
     }
 </script>
