--- a/pay-select-number.html
+++ b/pay-select-number.html
@@ -16,6 +16,29 @@
         <p>
             预计12月1日发货 此款今日剩余数 <i class="point-font">3</i>
         </p>
+        <div class="count">
+            <div class="count-left">
+                <div class="count-left-item">
+                    <span class="count-item-img">
+                        <img src="img/test-pic.jpg" alt=""/>
+                    </span>
+                </div>
+                <div class="multiplication">x</div>
+                <div class="count-left-item-number">1000</div>
+            </div>
+            <div class="count-right">
+                <div class="addition">+</div>
+                <div class="subtraction">-</div>
+            </div>
+        </div>
+        <div class="select-wrap">
+            <select>
+                <option>选择其他颜色</option>
+                <option>选择其他颜色2</option>
+                <option>选择其他颜色3</option>
+            </select>
+            <div class="select-down"></div>
+        </div>
     </section>
 </div>
 </body>
