--- a/appointment-info.html
+++ b/appointment-info.html
@@ -32,12 +32,12 @@
                 得到陈冠希签名珍藏版BOBO BEAR
             </i>
         </p>
-        <div class="read-more-wrap">
-            <em class="read-more" id="j-tt">
+        <dl class="read-more-wrap">
+            <dt class="read-more" id="j-tt">
                 展开规则详情介绍
                 <span class="read-more-down"></span>
-            </em>
-            <section class="read-more-info" id="j-info">
+            </dt>
+            <dd class="read-more-info" id="j-info">
                 <p>
                     <span class="left-slogo2"></span>
                     <i class="wz">
@@ -80,8 +80,8 @@
                         地址或者自己帮助朋友填写地址
                     </i>
                 </p>
-            </section>
-        </div>
+            </dd>
+        </dl>
         <p>
             <strong class="bk-font">支付流程</strong>
         </p>
