pay-select-number ++

--- a/pay-select-number.html
+++ b/pay-select-number.html
@@ -12,7 +12,7 @@
 <body>
 <div class="wrap-box">
     <section class="pay-select-number-wrap">
-        <h2>#BBF「淫乱生活」亮粉BOBO熊</h2>
+        <h2>预约#BBF「淫乱生活」<span class="point-font2">blue</span>BOBO熊</h2>
         <p>
             预计12月1日发货 此款今日剩余数 <i class="point-font">3</i>
         </p>
@@ -23,21 +23,30 @@
                         <img src="img/test-pic.jpg" alt=""/>
                     </span>
                 </div>
-                <div class="multiplication">x</div>
-                <div class="count-left-item-number">1000</div>
+                <div class="count-left-item-number">
+                    12
+                    <div class="line"></div>
+                </div>
             </div>
             <div class="count-right">
                 <div class="addition">+</div>
                 <div class="subtraction">-</div>
             </div>
         </div>
-        <div class="select-wrap">
-            <select>
-                <option>选择其他颜色</option>
-                <option>选择其他颜色2</option>
-                <option>选择其他颜色3</option>
-            </select>
-            <div class="select-down"></div>
+        <ul class="show-color">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li class="w80p"></li>
+            <li></li>
+        </ul>
+        <div class="pay-btns">
+            <button type="button" class="wx-btn fl">微信支付</button>
+            <div class="show-money">
+
+            </div>
+            <button type="button" class="zfb-btn fr">支付宝支付</button>
         </div>
     </section>
 </div>
