pay-select-number end

--- a/pay-select-number.html
+++ b/pay-select-number.html
@@ -41,10 +41,16 @@
             <li class="w80p"></li>
             <li></li>
         </ul>
-        <div class="pay-btns">
+        <div class="pay-btns cf">
             <button type="button" class="wx-btn fl">微信支付</button>
-            <div class="show-money">
-
+            <div class="show-money-wrap">
+                <div class="show-money-con">
+                    <div class="show-money-bdr">
+                        9999
+                    </div>
+                </div>
+                <div class="show-money-logo1">定金</div>
+                <div class="show-money-logo2">&yen;</div>
             </div>
             <button type="button" class="zfb-btn fr">支付宝支付</button>
         </div>
