--- a/login.html
+++ b/login.html
@@ -26,6 +26,8 @@
         </p>
         <p>
             <button type="button" class="login-btn">登陆</button>
+            <input type="checkbox" name="" id="ck" class="login-ckbox"/>
+            <label for="ck">自动登录</label>
         </p>
     </section>
 </div>
