--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
         <p>
             <button type="button" class="login-btn">登陆</button>
             <input type="checkbox" name="" id="ck" class="login-ckbox"/>
-            <label for="ck">自动登录</label>
+            <label for="ck" class="ck-lab">自动登录</label>
         </p>
     </section>
 </div>
