--- a/succeed-friend.html
+++ b/succeed-friend.html
@@ -12,7 +12,7 @@
             height: 100%;}
         .wrap-box{
             height: 100%;
-            background: url(../img/succeed.jpg) 0 0 repeat;
+            background: url(img/succeed.jpg) 0 0 repeat;
             background-size: 100%;
         }
     </style>
