--- a/address.html
+++ b/address.html
@@ -47,7 +47,7 @@
             <div class="select-down"></div>
         </div>
         <div class="textarea-wrap">
-            <textarea name="" id="" class="input-textarea" cols="38" rows="5"></textarea>
+            <textarea name="" id="" class="input-textarea" cols="38" rows="5" placeholder="填写详细地址"></textarea>
         </div>
         <button class="address-btn" type="button">完成</button>
     </section>
