--- a/login.html
+++ b/login.html
@@ -24,8 +24,8 @@
             <input class="input-text login-input2" type="text" name="" id="" placeholder="登录密码"/>
             <a class="forget" href="">忘记密码？</a>
         </p>
-        <p>
-            <button type="button" class="login-btn">登陆</button>
+        <p class="mgt60">
+            <button type="button" class="login-btn">登录</button>
             <input type="checkbox" name="" id="ck" class="login-ckbox"/>
             <label for="ck" class="ck-lab">自动登录</label>
         </p>
