--- a/register-wrong.html
+++ b/register-wrong.html
@@ -11,11 +11,15 @@
 </head>
 <body>
 <div class="wrap-box">
-    <section class="my-fund-none-wrap">
-        <h1>您暂无基金</h1>
-
-        <h2>邀请朋友获得更多的友情基金</h2>
-        <button class="my-fund-btn">基金获取方法</button>
+    <section class="register-wrap">
+        <h1 class="register-tt">
+            创建你的<span>#</span><b>BBF</b>帐号
+        </h1>
+        <div class="register-phone">
+            <input class="register-input wrong" type="text" name="" id="" placeholder="手机号码有误，请重新输入"/>
+            <button type="button" class="register-phone-btn">获取验证码</button>
+            <a class="h-account" href="">我有账号 &gt;</a>
+        </div>
     </section>
 </div>
 </body>
