--- a/my-fund.html
+++ b/my-fund.html
@@ -2,9 +2,18 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="format-detection"content="telephone=no, email=no" />
+    <title>BBF</title>
+    <link rel="stylesheet" href="css/bbf-style.css"/>
 </head>
 <body>
+<div class="wrap-box">
+    <section class="my-fund-wrap">
 
+    </section>
+</div>
 </body>
 </html>
