my-fund.html end

--- a/my-fund.html
+++ b/my-fund.html
@@ -12,7 +12,25 @@
 <body>
 <div class="wrap-box">
     <section class="my-fund-wrap">
-
+        <ul class="my-fund-list2">
+            <li>
+                <h2>友情基金</h2>
+                <em>累计￥100可以提现</em>
+                <i>￥99</i>
+                <div class="my-fund-btns">
+                    <button type="button" class="my-fund-btn-right">明细</button>
+                    <button type="button" class="my-fund-btn-left">提现</button>
+                </div>
+            </li>
+            <li>
+                <h2>暂冻基金</h2>
+                <em>目前您有3笔暂冻基金</em>
+                <i>￥99</i>
+                <div class="my-fund-btns">
+                    <button type="button" class="my-fund-btn-right">明细</button>
+                </div>
+            </li>
+        </ul>
     </section>
 </div>
 </body>
