修正page-wrong.html ,gift-info-none.html 的外层class类名

--- a/gift-info-none.html
+++ b/gift-info-none.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="wrap-box">
-    <section class="my-fund-wrap">
+    <section class="my-fund-none-wrap">
         <h1>暂无记录</h1>
 
         <h2>您目前还没送出过礼物哦</h2>
