--- a/page-wrong.html
+++ b/page-wrong.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="wrap-box">
-    <section class="my-fund-wrap">
+    <section class="my-fund-none-wrap">
         <h1>SORRY，页面错误</h1>
 
         <h2>您可尝试 <a class="point-font2" href="">刷新本页</a></h2>
