discount-info.html end

--- a/discount-info.html
+++ b/discount-info.html
@@ -13,10 +13,17 @@
 <div class="wrap-box">
     <section class="discount-info-wrap">
         <div class="discount-info-tt">
-            折扣等级 9.5折 入门级
-            友情基金 &yen;88.5
+            <p>
+                折扣等级 <b>9.5</b>折&nbsp;&nbsp;&nbsp;入门级
+            </p>
+            <p>
+                友情基金 <em>&yen;88.5</em>
+            </p>
         </div>
-        <div class="discount-info-con-tt"></div>
+        <div class="discount-info-con-tt" id="j-tt">
+            永久折扣细则
+            <span class="read-more-down"></span>​
+        </div>
         <dl class="appointment-wrap read-more-wrap">
             <dd class="read-more-info" id="j-info">
                 <p>
@@ -70,8 +77,7 @@
         </dl>
         <div class="app-info2-btns">
             <div class="div-sjx"></div>
-            <button type="button" class="info2-left-btn">送朋友</button>
-            <button type="button" class="info2-right-btn">送自己</button>
+            <button type="button" class="discount-info-btn">我要更低折扣</button>
         </div>
     </section>
 </div>
