--- a/discount-info.html
+++ b/discount-info.html
@@ -24,7 +24,7 @@
             永久折扣细则
             <span class="read-more-down"></span>​
         </div>
-        <dl class="appointment-wrap read-more-wrap">
+        <dl class="appointment-wrap read-more-wrap pdb95">
             <dd class="read-more-info" id="j-info">
                 <p>
                     <span class="left-slogo2"></span>
@@ -73,9 +73,50 @@
                         地址或者自己帮助朋友填写地址
                     </i>
                 </p>
+                <p>
+                    <span class="left-slogo2"></span>
+                    <i class="wz">
+                        选择送朋友，当预约成功后需要朋友填写
+                        地址或者自己帮助朋友填写地址
+                    </i>
+                </p>
+                <p>
+                    <span class="left-slogo2"></span>
+                    <i class="wz">
+                        选择送朋友，当预约成功后需要朋友填写
+                        地址或者自己帮助朋友填写地址
+                    </i>
+                </p>
+                <p>
+                    <span class="left-slogo2"></span>
+                    <i class="wz">
+                        选择送朋友，当预约成功后需要朋友填写
+                        地址或者自己帮助朋友填写地址
+                    </i>
+                </p>
+                <p>
+                    <span class="left-slogo2"></span>
+                    <i class="wz">
+                        选择送朋友，当预约成功后需要朋友填写
+                        地址或者自己帮助朋友填写地址
+                    </i>
+                </p>
+                <p>
+                    <span class="left-slogo2"></span>
+                    <i class="wz">
+                        选择送朋友，当预约成功后需要朋友填写
+                        地址或者自己帮助朋友填写地址
+                    </i>
+                </p><p>
+                <span class="left-slogo2"></span>
+                <i class="wz">
+                    111选择送朋友，当预约成功后需要朋友填写
+                    地址或者自己帮助朋友填写地址
+                </i>
+            </p>
             </dd>
         </dl>
-        <div class="app-info2-btns">
+        <div class="app-info2-btns discount-info-foot">
             <div class="div-sjx"></div>
             <button type="button" class="discount-info-btn">我要更低折扣</button>
         </div>
