--- a/discount-info.html
+++ b/discount-info.html
@@ -14,7 +14,7 @@
     <section class="discount-info-wrap">
         <div class="discount-info-tt">
             <p>
-                折扣等级 <b>9.5</b>折&nbsp;&nbsp;&nbsp;入门级
+                折扣等级 <b>9.5</b>&nbsp;折&nbsp;&nbsp;&nbsp;入门级
             </p>
             <p>
                 友情基金 <em>&yen;88.5</em>
